fix z-index

--- a/src/styles/SwipeGallery.styl
+++ b/src/styles/SwipeGallery.styl
@@ -27,7 +27,6 @@
     &--invisible
       position absolute
       opacity 0
-      z-index -1
     &--visible
       position relative
       opacity 1
